Update ambas paginas

--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,67 @@
       </div>
     </header>
 
-    <section>
-      <h3>Aqui puedes ver las peliculas del Universo Cinematico de Marvel por orden cronologico de eventos.</h3>
-      <h3>Coloca tu mouse sobre el poster de una pelicula para ver la sinopsis y el año en que salió en el cine.</h3>
-      <h3>Haz click en el poster para ver el trailer.</h3>
+    <div class="container" id="container">
+        <article class="welcome_content">
+            <img src="../images/Infinity_Marvel.png" alt="home" class="img_content">
+        </article>
+
+    <section class ="button-yes-or-no">
+        <h2 class="quest">Bienvenid@, ¿conoces el Universo Cinematográfico Marvel (MCU)?</h2>
+        <div class="button-yes">
+            <button class="yes" type="submit">Si</button>
+            <button class="no" id="no"type="submit">No</button>
+        </div>
     </section>
 
+    <section id="marvel_universe" class="answer_no">
+        <div class="marvel_universe">
+        <h2 class="quest">¿Qué es el MCU?</h2>
+        <img class="irc_mi" src="https://media1.tenor.com/images/a197210a323e13f57eb9c86b1709f25f/tenor.gif" onload="typeof google==='object'&amp; &amp;google.aft&amp; &amp;google.aft(this)">
+        <p class="info_content"> El universo Marvel se ha vuelto un tanto popular por sus adaptaciones
+            cinematogràficas, sin embargo la leyenda comenzó desde hace más de 30 años y los cómics tienen
+        diferencias a lo que vemos en la pantalla grande. <br> Marvel ha creado múltiples historias y universos
+    paralelos a su historia más popular, conocida como Tierra-616 y en el aparecen los personajes que la mayoría
+    conoce: Capitán América, Spider-Man, Iron Man, Dr. Strange, Daredevil, Thor, Hulk, Los 4 fantásticos,
+    Nick Fury (director de SHIELD), los X-Men y así como los Avengers.</p>
+    <p class="info_content">Para entender mejor este universo te ponemos la cronología de tiempo con las películas
+        para que puedas entender el desarrollo de este mundo cinematográfico.</p>
+    </div>
+    <!-- <div class="slideshow" id="slideshow">
+            <a id="prev">‹</a>
+            <a href="#modal_video" class="video_content"><img src="http://es.web.img2.acsta.net/r_1280_720/medias/nmedia/18/84/79/82/20099009.jpg" alt="first" class="carousel"></a>
+            <div id="modal_video" class="modal_container">
+                <div id="container_video" class="container_video">
+                    <a  href="#marvel_universe" class="color_button"><span class="icon-squared-cross"></span></a>
+                    <iframe width="760" height="350" src="https://www.youtube.com/embed/JnL7sjclx8k?start=7"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen class="video_trailer"></iframe>
+                </div>
+            </div>
+            <img src="http://es.web.img3.acsta.net/c_215_290/pictures/19/02/05/12/55/5474956.jpg" alt="" class="carousel">
+            <img src="https://upload.wikimedia.org/wikipedia/en/7/70/Ironmanposter.JPG" alt="" class="carousel">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51RPKjx2EJL._SY445_.jpg" alt="" class="carousel">
+            <img src="https://imagessl9.casadellibro.com/m/ig/9/1303009.jpg" alt="" class="carousel">
+            <img src="https://upload.wikimedia.org/wikipedia/en/f/fc/Thor_poster.jpg" alt="" class="carousel">
+            <img src="https://cdn.europosters.eu/image/1300/posters/avengers-one-sheet-i12720.jpg" alt="" class="carousel">
+            <a id="next">›</a>
+            <span class="caption"></span>
+            <span class="caption"></span>
+            <span class="caption"></span>
+            <span class="caption"></span>
+    </div> -->
+
     <div class="root" id="root"></div>
+    </section>
+
+
+
+    <img src="../images/background_marvel.png" alt="background" class="background_marvel">
+  </div>
+
+    <footer class="footer_content">
+    </footer>
+
 
     <script src="data.js"></script>
     <script src="main.js"></script>
