Applied changes of social media links and MCU video

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,8 @@
           </li>
           <li class="flex_style letter_style">
             <span class="head_content">Share if you like the page: </span>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.facebook.com/TioMarvelpeliculas/" target="_blank" class="share"><span class="icon-facebook icon_color margin_button"></span></a>
-            <a href="https://twitter.com/home?status=%40Marvel%0A" target="_blank" class="share"><span class="icon-twitter icon_color margin_button"></span></a>
-            <a href="https://plus.google.com/share?url=https%3A//www.instagram.com/Marvel/?hl=es-la" target="_blank" class="share"><span class="icon-instagram icon_color margin_button"></span></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//ilyoss.github.io/GDL002-hackathon-interna/src/%23marvel_universe" target="_blank" class="share"><span class="icon-facebook icon_color margin_button"></span></a>
+            <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Filyoss.github.io%2FGDL002-hackathon-interna%2Fsrc%2F%23marvel_universe&text=Chronology%20of%20Marvel%20movies" target="_blank" class="share"><span class="icon-twitter icon_color margin_button"></span></a>
           </li>
         </ul>
       </nav>
@@ -48,7 +47,7 @@
     <!-- Section for the marvel universe information, displays the movie list -->
     <section id="marvel_universe" class="history">
       <h2 class="topHeaders">History about MCU</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/peOWYBGuUFs?start=26" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+      <a href="#modal_video" class="video_content" data-trailer-youtube-id="https://www.youtube.com/embed/peOWYBGuUFs?start=26"><img alt="video_mcu" src="../images/video_mcu.jpg" class="mcu"></a>
       <p class="text">Here you will find all the movies from Marvel's Cinematic Universe by chronological order of events.</p>
       <p class="text">Put your mouse over a movie poster to display the plot, and click on it to watch the trailer.</p>
 
