Added our names to the about us page

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
     <!-- Section with the information from about us -->
     <section id="aboutUsPage" class="infoAboutUs">
         <span class="title_about"><strong>About us</strong></span>
-        <p class="infoAboutUs1">Infinity Marvel was created with the purpose of being a website that provides information and data of the Marvel Cinematic Universe.</p><br>
+        <p class="infoAboutUs1">Infinity Marvel was proudly created by Tita, Karla, Susy and Ily, with the purpose of being a website that provides information and data of the Marvel Cinematic Universe.</p><br>
         <img src="http://www.lovethisgif.com/uploaded_images/20833-Cia-Dos-Gifs-Capit-o-America.gif">
         <p class="infoAboutUs2">We want to be a community where you all can watch, read and collaborate with everything that may be important to know about this Universe.</p>
            <p class="infoFeel"><br><strong>Feel welcome to be part and belong to this commnity!</strong></p>
